[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemies/hexagon/hexagon.png" type="Texture" id=1]
[ext_resource path="res://enemies/hexagon/Hexagon.gd" type="Script" id=2]
[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://guns/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://bullets/ball_medium/BallMedium.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0

[node name="Hexagon" instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 5
mass = 1000.0
angular_velocity = 2.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Stats" parent="." index="2"]
max_health = 3

[node name="VisibilityEnabler2D" parent="." index="3"]
scale = Vector2( 3.2, 3.2 )
process_parent = true
physics_process_parent = true

[node name="GunsPositioning" type="Position2D" parent="." index="4"]

[node name="Gun1" parent="GunsPositioning" index="0" instance=ExtResource( 4 )]
position = Vector2( 9.15527e-05, -40 )
rotation = 5.87106e-06
bullet_velocity = 120
BulletType = ExtResource( 5 )

[node name="Cooldown" parent="GunsPositioning/Gun1" index="0"]
wait_time = 0.2

[node name="Gun2" parent="GunsPositioning" index="1" instance=ExtResource( 4 )]
position = Vector2( 8.61485e-05, 40 )
rotation = -3.14159
bullet_velocity = 120
BulletType = ExtResource( 5 )

[editable path="GunsPositioning/Gun1"]
